更新手动安装文档